2006-04-19  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/driver.c: Perform reverse lookup on hostname given the IP
	address only if hostname param not specified in nssock section
 	for the socket driver.
        In some situations, reverse lookup will not be successful which
	inhibits us to start properly (which we could). 

	* nsd/tclinit.c: Removed traces of ns_tls support.
 
2006-04-18  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tclinit.c:
	* nsd/tclcmds.c: Remove ns_tls implementation

2006-04-18  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/ns_schedule.test: Add a couple of tests for scheduled
	procs.

	* nsd/cache.c:
	* nsd/dns.c:
	* nsd/nsconf.c: Use new API for DNS cache code.

	* nsd/nsmain.c:
	* nsd/tclinit.c: Run command interpreter in seperate thread,
	leaving main thread to shut down the server cleanly when the exit
	command is run.

2006-04-15  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsmain.c (Ns_Main): Copy executable name as memory is freed
	and reused later during Tcl initialisation.

	* nsd/tclcmds.c: Cache commands require a virtual server context.
	* nsd/tclcache.c: Don't artificially inflate flush stats when a
	Tcl script under evaluation errors.

	* nsd/cache.c:
	* tests/ns_cache.test: Clarify responsibilities of
	Ns_CacheCreateEntry, and Ns_CacheWaitCreateEntry. The first
	guarantees an Ns_Entry as a result and handles expirey, the second
	can return NULL only on timeout waiting for another thread to
	update the same entry.  Previously a simultaneous flush would also
	cause a NULL return -- now however the entry is recreated. Fix bug
	with ExpireEntry: unset the value but do not delete the entry.

2006-04-15  Vlad Seryakov  <seryakov@users.sf.net>

	* include/nsthread.h: Introduced new error code NS_FTAL
        * nsd/driver.c: Made handling UDP driver more reliably against
        QoS attacks and error handling.
        
2006-04-14  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tclinit.c: